Revision history for Perl extension ExtUtils::CBuilder.

0.19

 - On Windows: embed manifest files in DLLs built with Module-Build
   when using VC8. [Steve Hay]

 - Added a workaround for a config error on dec_osf: the linker is
   $Config{cc}, not $Config{ld}. [Jarkko Hietaniemi]

 - Borland's compiler "response files" will not pass through macro
   definitions that contain quotes. The quotes get stripped and there
   seems to be no way to escape them. So we leave macros on the
   command line. [Randy W. Sims]

0.18  Sat Mar 25 13:35:47 CST 2006

 - Yet more fixes for arg_defines() on VMS. [Craig A. Berry and John
   E. Malmberg]

0.17  Wed Mar 15 22:46:15 CST 2006

 - When we're being run from an uninstalled perl distribution
   (e.g. one that's in the process of being built and tested), we
   search for perl first in the current working directory. [Randy
   Sims]

 - More fixing of the arg_defines() method on VMS. [Craig A. Berry and
   John E. Malmberg]

0.16  Mon Mar 13 17:08:21 CST 2006

 - Fix quoting of command line arguments on Windows. [Yitzchak
   Scott-Thoennes]

 - Provided a custom arg_defines() on VMS that does essentially the
   same thing for /define that version 0.14 did for /include. [Craig
   A. Berry]

 - Documented the existing 'quiet' parameter, which silences the
   printing of system() commands. [Suggested by Yitzchak
   Scott-Thoennes]

0.15  Mon Oct  3 17:10:32 CDT 2005

 - Several OS/2 fixes have been made, including: 1) adding the
   necessary version string to DLLs, 2) passing the executable's name
   to 'ldopts' without the .exe extension, 3) avoiding calling 'env'
   via the 'shrpenv' thingy, since it triggers a fork() bug. [Ilya
   Zakharevich]

 - Integrate a couple cleanup-related changes from bleadperl that
   somehow never got into this copy. [Steve Hay]

 - Added a new 'defines' parameter to compile(), which gives a
   platform-independant way to specify various -Dfoo=bar (or the